Fixed scrollbars in IE

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -10,13 +10,14 @@
 ud-sidebar-component {
   float: left;
   height: 100vh;
+  overflow: hidden;
 }
 
 main {
   float: left;
   height: 100vh;
   width: calc(100% - 350px);
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 
   @media (max-width: 768px) {
