--- a/src/app/users/users-list/usersList.component.scss
+++ b/src/app/users/users-list/usersList.component.scss
@@ -51,7 +51,7 @@
   height: calc(100% - 50px);
   margin: 0;
   padding: 0;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   li {
     position: relative;
